hphp/test/zend/bad/ext-pdo_sqlite/pdo_sqlite_createaggregate_002.php
<?php

$pdo = new PDO('sqlite::memory:');

$pdo->sqliteCreateAggregate('foo', 'a', '');
$pdo->sqliteCreateAggregate('foo', 'strlen', '');

?>